--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>quiz.test</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico?v=2">
+    <title>Geberitin IDO- ja Geberit-tuotteiden koulutus</title>
+    <meta property="og:title" content="Geberitin IDO- ja Geberit-tuotteiden koulutus"/>
+    <meta property="og:description" content="Geberit Oy"/>
+    <meta property="og:url" content="https://adgunsdigital.com/geberit-test/"/>
+    <meta property="og:site_name" content="Geberit"/>
+    <meta property="og:image" content="https://adgunsdigital.com/geberit-test/facebook.jpg"/>
+    <meta property="og:type" content="website"/>
   </head>
   <body>
     <noscript>
